--- a/GIFCopy/Base.lproj/Main.storyboard
+++ b/GIFCopy/Base.lproj/Main.storyboard
@@ -5,6 +5,7 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -18,7 +19,58 @@
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8ZP-l7-DK5">
                                 <rect key="frame" x="0.0" y="44" width="414" height="818"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <subviews>
+                                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Edp-hO-7p6">
+                                        <rect key="frame" x="0.0" y="756.5" width="414" height="61.5"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="0ot-BH-Fh5">
+                                            <size key="itemSize" width="128" height="128"/>
+                                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                        </collectionViewFlowLayout>
+                                        <cells>
+                                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="eeD-3E-yKH">
+                                                <rect key="frame" x="0.0" y="-33.5" width="128" height="128"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="Ucb-Sh-SOM">
+                                                    <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                </collectionViewCellContentView>
+                                            </collectionViewCell>
+                                        </cells>
+                                    </collectionView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tgm-j2-4Kw">
+                                        <rect key="frame" x="10" y="7" width="37" height="31"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" image="chevron.backward" catalog="system" title="">
+                                            <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </buttonConfiguration>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VC5-fL-Koe">
+                                        <rect key="frame" x="314.5" y="7" width="87.5" height="35"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="gray" image="Vector" imagePlacement="leading" title="Save" imagePadding="3">
+                                            <fontDescription key="titleFontDescription" name="MontserratRoman-Medium" family="Montserrat" pointSize="17"/>
+                                            <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <color key="baseBackgroundColor" white="0.66666666666666663" alpha="0.29457264072847683" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </buttonConfiguration>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="VC5-fL-Koe" firstAttribute="top" secondItem="8ZP-l7-DK5" secondAttribute="top" constant="7" id="Coc-x8-duU"/>
+                                    <constraint firstAttribute="bottom" secondItem="Edp-hO-7p6" secondAttribute="bottom" id="SgB-76-Sn8"/>
+                                    <constraint firstItem="Edp-hO-7p6" firstAttribute="height" secondItem="8ZP-l7-DK5" secondAttribute="height" multiplier="0.075" id="Upd-g6-DkM"/>
+                                    <constraint firstItem="Edp-hO-7p6" firstAttribute="leading" secondItem="8ZP-l7-DK5" secondAttribute="leading" id="e5e-Yy-rUB"/>
+                                    <constraint firstItem="tgm-j2-4Kw" firstAttribute="top" secondItem="8ZP-l7-DK5" secondAttribute="top" constant="7" id="iuQ-Dd-gwK"/>
+                                    <constraint firstAttribute="trailing" secondItem="VC5-fL-Koe" secondAttribute="trailing" constant="12" id="otB-B8-LZy"/>
+                                    <constraint firstAttribute="trailing" secondItem="Edp-hO-7p6" secondAttribute="trailing" id="uHb-GA-RPE"/>
+                                    <constraint firstItem="tgm-j2-4Kw" firstAttribute="leading" secondItem="8ZP-l7-DK5" secondAttribute="leading" constant="10" id="y6R-Ar-ayE"/>
+                                </constraints>
                             </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -31,15 +83,20 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="backButton" destination="tgm-j2-4Kw" id="MAf-7v-oav"/>
+                        <outlet property="saveButton" destination="VC5-fL-Koe" id="Dsf-nS-hTC"/>
+                        <outlet property="tabBarCollectionView" destination="Edp-hO-7p6" id="fhC-4h-Ic8"/>
                         <outlet property="videoView" destination="8ZP-l7-DK5" id="vvF-HH-QjT"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="35" y="65"/>
+            <point key="canvasLocation" x="34.782608695652179" y="64.955357142857139"/>
         </scene>
     </scenes>
     <resources>
+        <image name="Vector" width="20" height="20"/>
+        <image name="chevron.backward" catalog="system" width="96" height="128"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
