--- a/GIFCopy/AdjustOptionsCollectionViewCell.xib
+++ b/GIFCopy/AdjustOptionsCollectionViewCell.xib
@@ -6,6 +6,11 @@
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="Montserrat-VariableFont_wght.ttf">
+            <string>MontserratRoman-Regular</string>
+        </array>
+    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -16,25 +21,34 @@
                 <rect key="frame" x="0.0" y="0.0" width="53.5" height="53.5"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="vYR-YQ-cBV">
-                        <rect key="frame" x="13" y="13" width="27.5" height="27.5"/>
-                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <color key="tintColor" red="0.74117647058823533" green="0.74117647058823533" blue="0.74117647058823533" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6hi-pq-ckS">
+                        <rect key="frame" x="15" y="15" width="23.5" height="23.5"/>
+                        <fontDescription key="fontDescription" name="MontserratRoman-Regular" family="Montserrat" pointSize="13"/>
+                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Vfc-Yl-6Qb">
+                        <rect key="frame" x="15" y="15" width="23.5" height="23.5"/>
                     </imageView>
                 </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
-            <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.44886703025581087" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstItem="vYR-YQ-cBV" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="13" id="CTU-XZ-D7R"/>
-                <constraint firstItem="vYR-YQ-cBV" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="13" id="p6t-TH-5Ug"/>
-                <constraint firstAttribute="bottom" secondItem="vYR-YQ-cBV" secondAttribute="bottom" constant="13" id="th4-fk-BgJ"/>
-                <constraint firstAttribute="trailing" secondItem="vYR-YQ-cBV" secondAttribute="trailing" constant="13" id="xwL-dt-DfI"/>
+                <constraint firstAttribute="trailing" secondItem="Vfc-Yl-6Qb" secondAttribute="trailing" constant="15" id="0Tw-Ui-gCn"/>
+                <constraint firstItem="Vfc-Yl-6Qb" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="15" id="5ii-dU-e1L"/>
+                <constraint firstAttribute="trailing" secondItem="6hi-pq-ckS" secondAttribute="trailing" constant="15" id="Arp-H0-pk6"/>
+                <constraint firstItem="Vfc-Yl-6Qb" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="15" id="Swt-Se-A69"/>
+                <constraint firstItem="6hi-pq-ckS" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="15" id="TaV-oe-81V"/>
+                <constraint firstAttribute="bottom" secondItem="Vfc-Yl-6Qb" secondAttribute="bottom" constant="15" id="Zch-KF-oPS"/>
+                <constraint firstItem="6hi-pq-ckS" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="15" id="a28-mb-4kS"/>
+                <constraint firstAttribute="bottom" secondItem="6hi-pq-ckS" secondAttribute="bottom" constant="15" id="wb1-iG-PYF"/>
             </constraints>
             <connections>
-                <outlet property="iconImageView" destination="vYR-YQ-cBV" id="ddH-LG-xje"/>
+                <outlet property="iconImageView" destination="Vfc-Yl-6Qb" id="ezj-wK-Wtg"/>
+                <outlet property="valueLabel" destination="6hi-pq-ckS" id="p1A-b9-a0L"/>
             </connections>
-            <point key="canvasLocation" x="132" y="66"/>
+            <point key="canvasLocation" x="131.8840579710145" y="65.625"/>
         </collectionViewCell>
     </objects>
 </document>
